.kube/backend/back-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-backend
  labels:
    app: test-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-backend
  template:
    metadata:
      labels:
        app: test-backend
    spec:
      containers:
        - name: test-backend
          image: xoriax/kube-test:alpine
          ports:
            - containerPort: 8000
