.kube/backend/back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-backend

spec:
  selector:
    app: test-backend

  ports:
    - name: web
      port: 8000
      targetPort: web
